admin/src/index.scss
@import '../../shared/main';

:root {
  height: 100dvh;
  --success: #5c5;
}
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  height: 100vh;
  background: #000;
}
#root { min-height: 100%; display:flex; }
main {
  word-break: break-word; /* avoid causing unnecessary horizontal scrolling */
}
code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}
img.flag {
  width: 1.5em;
  height: 1em;
  vertical-align: text-top;
  margin-top: 1px;
}
.icon-w-text {
  margin-right: .5em;
}
form { max-width: 100%; } // make fields with unbreakable text (LinkField) to not overflow the available space

.MuiSvgIcon-root {
  vertical-align: bottom;
}
div.MuiTreeItem-content { padding: 0; } // remove wasting horizontal padding
.MuiDataGrid-columnHeaders {
  background-color: #8882;
}
.MuiDataGrid-cell {
  line-height: 1.1em;
}
.MuiDataGrid-filterForm { flex-wrap: wrap; justify-content: space-evenly; row-gap: 1em; } // fit on mobile

.wrap[role=cell] { white-space: normal !important }

ol, ul { margin-top: .2em; margin-bottom: .2em; padding-left: 1.5em; }

h2.MuiDialogTitle-root { /* less padding */
  padding-top: 2px;
  padding-bottom: 2px;
}
.dialog-alert .MuiDialogContent-root {
  max-width: 45em;
  padding: .5em 1em;
}

.release code {
  font-size: 95%;
  background-color: #8883;
  padding: 0 0.2em;
  border-radius: .2em;
}

.animated-dashed-line {
  width: 100%;
  height: 2px;
  background-image: linear-gradient(to right, currentColor 50%, transparent 50%);
  background-size: 10px 100%; /* 20px is the length of each dash + gap  */
  animation: animate-dash 1s alternate linear infinite;
}
@keyframes animate-dash { to { background-position: 20px 0; } }

@keyframes success {
  50% { transform: scale(1.3); color: var(--success); }
  100% { transform: inherit; color: inherit; }
}

// (try) avoid hidden scrollbars
::-webkit-scrollbar { width: 4px }
::-webkit-scrollbar-thumb { background: #8888 }
::-webkit-scrollbar-track { background: #8882 }

// adjust prism black theme
.token.operator { background: unset !important; }

